change font and picture gradent

--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     <title>The Environmental Impacts of Inefficient Supercomputing</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body >
+<body>
     <header class="header">
         <nav class="navbar" aria-label="Main Navigation">
             <ul class="nav-list">
@@ -19,24 +19,29 @@
         </nav>
     </header>
     
-    <div class="main">
-        <h1>The Environmental Impacts of Inefficient Supercomputing</h1>
+    <div class="main hero">
+        <div class="hero-text-box">
+            <h1>The Environmental Impacts of Inefficient Supercomputing</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="scroll-annotation">Scroll down to explore more</p>
+        </div>
     </div>
-    <div class="info-page" class="content">
+    <div class="info-page content">
+        <div class="overlay"></div>
         <div class="tile">
-            <img src="img/power2.png" alt="Lightning Icon" class="invert-colors">
+            <img src="img/power2.png" alt="Lightning Icon" class="invert-colors centered-icon">
             <h2>What is Inefficient Supercomputing?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
             <button class="expand-button">Expand</button>
         </div>
         <div class="tile">
-            <img src="img/drop.png" alt="Drop Icon">
+            <img src="img/drop.png" alt="Drop Icon" class="centered-icon">
             <h2>What are the Consequences of Inefficient Supercomputing?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
             <button class="expand-button">Expand</button>
         </div>
         <div class="tile">
-            <img src="img/book.png" alt="Book Icon">
+            <img src="img/book.png" alt="Book Icon" class="centered-icon">
             <h2>What can we do?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
             <button class="expand-button">Expand</button>
