--- a/impact-calculator.html
+++ b/impact-calculator.html
@@ -27,17 +27,17 @@
             <hr style="border-top: 2px solid white;">
             <div class="input-box">
                 <label>Average Supercomputing Hours</label>
-                <input type="text" class="input">
+                <input type="text" class="input" id="input1">
             </div>
             <div class="input-box">
                 <label>Type of Supercomputing Task</label>
-                <input type="text" class="input">
+                <input type="text" class="input" id="input2">
             </div>
             <div class="input-box">
                 <label>Power Consumption</label>
-                <input type="text" class="input">
+                <input type="text" class="input" id="input3">
             </div>
-            <button class="calculate-button">Calculate</button>
+            <button class="calculate-button" onclick="calculate()">Calculate</button>
         </div>
 
         <div class="divider"></div>
@@ -46,16 +46,40 @@
             <h2>Results</h2>
             <div class="semi-circle"></div>
             <div class="smaller-semi-circle"></div>
-            <div class="efficiency-box">
+            <div class="efficiency-box" id="result1">
+                <p class="result-value"></p>
                 <p>Your CO2 emissions per hour</p>
             </div>
-            <div class="efficiency-box">
+            <div class="efficiency-box" id="result2">
+                <p class="result-value"></p>
                 <p>Your CO2 emissions per year</p>
             </div>
-            <div class="efficiency-box">
+            <div class="efficiency-box" id="result3">
+                <p class="result-value"></p>
                 <p>Kilometers by car driven</p>
             </div>
         </div>
     </div>
+
+    <script>
+        function calculate() {
+            const input1 = parseFloat(document.getElementById('input1').value);
+            const input2 = parseFloat(document.getElementById('input2').value);
+            const input3 = parseFloat(document.getElementById('input3').value);
+
+            if (isNaN(input1) || isNaN(input2) || isNaN(input3)) {
+                alert("Please enter valid numbers in all fields.");
+                return;
+            }
+
+            const result = input1 + input2 + input3;
+
+            const output = [result + ' kg', result + ' kg', result + ' km'];
+
+            document.getElementById('result1').querySelector('.result-value').innerText = output[0];
+            document.getElementById('result2').querySelector('.result-value').innerText = output[1];
+            document.getElementById('result3').querySelector('.result-value').innerText = output[2];
+        }
+    </script>
 </body>
 </html>
