changes to home-screen

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Header</title>
+    <title>Imact calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,12 +22,24 @@
     <section class="hero">
         <img src="sustainable.jpg" alt="Sustainable" class="hero-image">
         <div class="hero-text-box">
-            <h1>Sustainable Supercomputing: Transform Your Research and Accelerate the Green Transition...</h1>
-            <p>Sustainable coding leads to reduced electricity usage and CO2 emissions. Learn how it can lead to more impactful research and a healthier planet for humans, animals, and plants alike.</p>
+            <h1>Your code is part of the problem. We need your help for more sustainable supercomputing</h1>
+            <p>Only because your code runs in the cloud doesn't mean that your code doesn't affect the earth. 
+                By 2030, 20% of the world's electricity is expected to be consumed by internet and communication technology.<sup><a href="https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new-perspectives-on-internet-electricity-use-in-2030/">1</a></sup>
+            </p>
         </div>
-        <a href="https://www.surf.nl">
-            <img src="surf.svg" alt="SURF Logo" class="logo">
-        </a>
+
+       
+        <div class="button-container">
+            <a href="impact-calculator.html" class="cta-button">Calculate My Environmental Impact</a>
+        </div>
+        <div class="logos-container">
+            <a href="https://www.surf.nl">
+                <img src="surf.svg" alt="SURF Logo" class="logo">
+            </a>
+            <a href="https://uva.nl">
+                <img src="img/uva.svg" alt="UvA Logo" class="logo">
+            </a>
+        </div>
     </section>
 </body>
 </html>
