--- a/info.html
+++ b/info.html
@@ -19,8 +19,8 @@
         </nav>
     </header>
     
-    <div class="main hero">
-        <div class="hero-text-box">
+    <div class="main hero-info">
+        <div class="hero-info-text-box">
             <h1>The Environmental Impacts of Inefficient Supercomputing</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <p class="scroll-annotation">Scroll down to explore more</p>
