added adams texts

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         <div class="tile">
             <img src="img/power2.png" alt="Lightning Icon" class="invert-colors centered-icon">
             <h2>What is Inefficient Supercomputing?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+            <p>Inefficient supercomputing means not using high-performance computing (HPC) resources properly and efficiently. This inefficiency can arise from various factors, including poorly optimized software, inadequate hardware configurations, or ineffective resource management. We are focusing on poorly optimised software here. </p>
             <button class="expand-button">Expand</button>
         </div>
         <div class="tile">
             <img src="img/drop.png" alt="Drop Icon" class="centered-icon">
             <h2>What are the Consequences of Inefficient Supercomputing?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+            <p>Running inefficient code on supercomputers will lead to software bottlenecks resulting in slowed processing speed and wasted resources. Electricity and water consumption will increase as more power is needed to chew through inefficient code and more water is required to cool the hot powerful hardware. Bad code may also have hardware utilization, resource allocation, and scalability issues leading to improper use of the hardware based on what the program needs. </p>
             <button class="expand-button">Expand</button>
         </div>
         <div class="tile">
             <img src="img/book.png" alt="Book Icon" class="centered-icon">
             <h2>What can we do?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+            <p>Addressing these inefficiencies requires better software development practices.  By teaching you and other researchers about writing efficient code and encouraging you the write such code, the full potential of supercomputing resources can be unlocked, leading to further advancements in scientific research, technological development, and complex problem-solving all while reducing the growing impact of HPC on the enviromnent.</p>
             <button class="expand-button">Expand</button>
         </div>
     </div>
