--- a/best-practices.html
+++ b/best-practices.html
@@ -23,28 +23,48 @@
         <h1>Best Practices Guide</h1>
         <section class="cards">
             <div class="card">
-                <h2>Energy Efficient Supercomputing</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+                <h2>Minimise Loops, Nesting, and Iterations</h2>
+                <p>Choose appropriate data structures and algorithms for your problem domain. Understanding their time and space complexities can greatly enhance code performance. Limit the use of loops, as they are processor-intensive; excessive looping can degrade performance. </p>
             </div>
             <div class="card">
-                <h2>Code Optimization</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+                <h2>Comment on Your Code</h2>
+                <p>Commenting your code effectively enhances understanding and aids in development, code reviews, deployments, and troubleshooting. Descriptive comments should complement well-designed code, providing insights into decisions and nuances. </p>
             </div>
             <div class="card">
-                <h2>Resource Conservation</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+                <h2>Benchmarks and Performance Testing</h2>
+                <p>Use benchmarks and performance tests to identify and fix inefficiencies, such as bottlenecks. Do this by tracking resource utilisation, improving code review guidelines, automating tests and deployments, measuring performance via input/output operations, and assessing space and time complexity of algorithms and data structures. </p>
             </div>
             <div class="card">
-                <h2>Computational Load</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+                <h2>Utilise Collaborative Code Reviews</h2>
+                <p>Collaborating on code traditionally involves passing versions back and forth, leading to inefficiencies and version control issues. A better approach is using Git, a version control system enabling simultaneous work on code. Git facilitates seamless merging of changes into a central repository, ensuring everyone works on the latest version. This improves code quality, facilitates knowledge sharing, and reduces the risks of code bugs. While conducting code reviews, encourage honest feedback and focus on team effort. </p>
             </div>
             <div class="card">
-                <h2>Parallel Computing</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+                <h2>Regular Code Refactoring</h2>
+                <p>Refactoring involves restructuring code without altering its behavior to enhance readability, efficiency, maintainability, and to reduce the risk of bugs. To do this in the best way possible, write automated tests, make small, incremental changes, and document those changes. </p>
             </div>
             <div class="card">
-                <h2>Cloud and Virtual Technologies</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+                <h2>Consider the Coding Language</h2>
+                <p>Understanding the nuances of programming languages is crucial, considering factors like syntax, data types, and multi-threading capabilities. Adopting a coding standard ensures consistency, readability, and maintainability of code. Popular standards like PEP 8 for Python and the Google Java Style Guide enhance code quality. </p>
+            </div>
+            <div class="card">
+                <h2>Other Small Tips</h2>
+                <p>Avoid unnecessary variable declarations, optimise database queries, reduce or eliminate code duplication, cache results, optimise network requests, and use asynchronous programming. </p>
+            </div>
+            <div class="card">
+                <h2>Make Sure Your Code Is Properly Structured </h2>
+                <p>Adding structure to your code and packages enhances efficiency and scalability, aiding in seamless implementation and version control management. Poor structure can lead to confusion, tedious debugging, and unnecessary refactoring. Good structure saves time by facilitating development, maintenance, and debugging processes. It includes proper formatting, dependency tracking, module organisation, and documentation. Choosing appropriate data structures and algorithms further improves code performance and efficiency.</p>
+            </div>
+            <div class="card">
+                <h2>Write Reusable and Repeatable Code</h2>
+                <p>Writing reusable and repeatable code improves code quality, security, and reliability. This involves considering code structure, templates, dynamic values, and Object-Oriented Programming (OOP) practices. Advocating for writing reusable code fosters efficiency and consistency in the Software Development Lifecycle (SDLC), ultimately enhancing the overall quality of the codebase.</p>
+            </div>
+            <div class="card">
+                <h2>Sources</h2>
+                <p>
+                https://dev.to/akashakki/10-tips-for-optimizing-your-code-efficiency-21ol
+                https://stackify.com/7-steps-to-improve-code-quality/
+                https://www.cloudzero.com/blog/best-practices-for-efficient-code/
+                https://www.datacamp.com/tutorial/coding-best-practices-and-guidelines</p>
             </div>
         </section>
     </main>
