--- a/impact-calculator.html
+++ b/impact-calculator.html
@@ -17,7 +17,7 @@
                 <li><a href="best-practices.html">Best Practices</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
-        </nav>type
+        </nav>
     </header>
 
     <h1>CO2 Emissions Calculator</h1>
