--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imact calculator</title>
+    <title>Impact calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     <section class="hero">
         <img src="sustainable.jpg" alt="Sustainable" class="hero-image">
         <div class="hero-text-box">
-            <h1>Your code is part of the problem. We need your help for more sustainable supercomputing</h1>
+            <h1>Sustainable Supercomputing: Your code is part of the problem but you can be part of the solution.</h1>
             <p>Only because your code runs in the cloud doesn't mean that your code doesn't affect the earth. 
                 By 2030, 20% of the world's electricity is expected to be consumed by internet and communication technology.<sup><a href="https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new-perspectives-on-internet-electricity-use-in-2030/">1</a></sup>
             </p>
