--- a/best-practices.html
+++ b/best-practices.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Practices Guide</title>
+    <title>Impact calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
