--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
     <header class="header">
         <nav class="navbar" aria-label="Main Navigation">
             <ul class="nav-list">
-                <li><a href="index.html">Home page</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="impact-calculator.html">Impact Calculator</a></li>
-                <li><a href="info.html">Info page</a></li>
+                <li><a href="info.html">Info Page</a></li>
                 <li><a href="best-practices.html">Best Practices</a></li>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -23,17 +23,17 @@
         <h1>About Us</h1>
         <section class="about-cards">
             <div class="about-card">
-                <h2 class="card-header">We are</h2>
-                <p><img src="img/university.svg" alt="University Icon"> 6 Computational social science students at the University of Amsterdam</p>
+                <h2 class="card-header">Who are we?</h2>
+                <p><img src="img/university.svg" alt="University Icon"> We are six Computational Social Science students at the University of Amsterdam. This website is our Digital Behavioural Change Intervention to change researcher's coding habits to be more environmentally sustainable. </p>
             </div>
             <div class="about-card">
-                <h2 class="card-header">Our values</h2>
+                <h2 class="card-header">Our goals:</h2>
                 <p><img src="img/awareness.svg" alt="Awareness Icon"> Spread awareness</p>
-                <p><img src="img/target.svg" alt="Impact Icon"> Drive impact</p>
+                <p><img src="img/target.svg" alt="Impact Icon"> Change specific behaviour</p>
             </div>
             <div class="about-card">
-                <h2 class="card-header">Collaborators</h2>
-                <p><img src="img/surf.svg" alt="SURF Logo"> In collaboration with SURF</p>
+                <h2 class="card-header">Our collaborators:</h2>
+                <p><img src="img/surf.svg" alt="SURF Logo"> We are in collaboration with SURF; This website aims to help SURF's interests. </p>
             </div>
         </section>
     </main>
