add logo, remove info link from header, remove yellow boxes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impact calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="img/surf.svg" type="image/icon type">
 </head>
 <body>
     <header class="header">
@@ -12,7 +13,6 @@
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="impact-calculator.html">Impact Calculator</a></li>
-                <li><a href="info.html">Info</a></li>
                 <li><a href="best-practices.html">Best Practices</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
@@ -49,19 +49,16 @@
             <img src="img/power2.png" alt="Lightning Icon" class="invert-colors centered-icon">
             <h2>What is Inefficient Supercomputing?</h2>
             <p>Inefficient supercomputing means not using high-performance computing (HPC) resources properly and efficiently. This inefficiency can arise from various factors, including poorly optimized software, inadequate hardware configurations, or ineffective resource management. We are focusing on poorly optimised software here. </p>
-            <button class="expand-button">Expand</button>
         </div>
         <div class="tile">
             <img src="img/drop.png" alt="Drop Icon" class="centered-icon">
             <h2>What are the Consequences of Inefficient Supercomputing?</h2>
             <p>Running inefficient code on supercomputers will lead to software bottlenecks resulting in slowed processing speed and wasted resources. Electricity and water consumption will increase as more power is needed to chew through inefficient code and more water is required to cool the hot powerful hardware. Bad code may also have hardware utilization, resource allocation, and scalability issues leading to improper use of the hardware based on what the program needs. </p>
-            <button class="expand-button">Expand</button>
         </div>
         <div class="tile">
             <img src="img/book.png" alt="Book Icon" class="centered-icon">
             <h2>What can we do?</h2>
-            <p>Addressing these inefficiencies requires better software development practices.  By teaching you and other researchers about writing efficient code and encouraging you the write such code, the full potential of supercomputing resources can be unlocked, leading to further advancements in scientific research, technological development, and complex problem-solving all while reducing the growing impact of HPC on the enviromnent.</p>
-            <button class="expand-button">Expand</button>
+            <p>Addressing these inefficiencies requires better software development practices.  By teaching you and other researchers about writing efficient code and encouraging you the write such code, the full potential of supercomputing resources can be unlocked, leading to further advancements in scientific research, technological development, and complex problem-solving all while reducing the growing impact of HPC on the environment.</p>
         </div>
     </div>
 </body>
