--- a/best-practices.html
+++ b/best-practices.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impact calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="img/surf.svg" type="image/icon type">
 </head>
 <body>
     <header class="header">
@@ -12,7 +13,6 @@
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="impact-calculator.html">Impact Calculator</a></li>
-                <li><a href="info.html">Info</a></li>
                 <li><a href="best-practices.html">Best Practices</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
