--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="video-background"></div>
+    <input type="range" id="speedControl" min="0" max="100" value="0">
+    <button onclick="playSegment()">Play Segment</button>
     <header class="header">
         <nav class="navbar" aria-label="Main Navigation">
             <ul class="nav-list">
