--- a/impact-calculator.html
+++ b/impact-calculator.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impact Calculator</title>
     <link rel="stylesheet" href="styles.css">
+     <link rel="icon" href="img/surf.svg" type="image/icon type">
     <script src="calc.js" defer></script>
 </head>
 <body class="calculator-page">
