--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impact calculator</title>
+    <link rel="icon" href="img/surf.svg" type="image/icon type">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
