--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     </header>
     
     <main>
+        <div class="scrollable-container">
         <h1>About Us</h1>
         <section class="about-cards">
             <div class="about-card">
@@ -36,6 +37,7 @@
                 <p><img src="img/surf.svg" alt="SURF Logo"> We are in collaboration with SURF; This website aims to help SURF's interests. </p>
             </div>
         </section>
+    </div>
     </main>
 </body>
 </html>
