--- a/best-practices.html
+++ b/best-practices.html
@@ -18,8 +18,9 @@
             </ul>
         </nav>
     </header>
-    
+    <div class="scrollable-container">
     <main>
+       
         <h1>Best Practices Guide</h1>
         <section class="cards">
             <div class="card">
@@ -68,5 +69,6 @@
             </div>
         </section>
     </main>
+</div>
 </body>
 </html>
