--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="impact-calculator.html">Impact Calculator</a></li>
                 <li><a href="best-practices.html">Best Practices</a></li>
-                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -27,6 +26,10 @@
             <h1>Sustainable Supercomputing: Your code is part of the problem but you can be part of the solution.</h1>
             <p>Only because your code runs in the cloud doesn't mean that your code doesn't affect the earth. 
                 By 2030, 20% of the world's electricity is expected to be consumed by internet and communication technology.<sup><a href="https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new-perspectives-on-internet-electricity-use-in-2030/">1</a></sup>
+		<br><br>
+		Our environmental impact calculator works by taking inputs (Processor time spent (hours), Type of node, Total data generated (GiB), Total duration of project (days)) and calaulates the energy used and emissions emitted by running such code on SURF's supercomputer (Snellius). 
+		We aim to make users of Snellius more aware of the impact of running their code and encourage them to write more efficient code by giving them tips (best practices). If you are a researcher or programmer and wish to learn more about code efficiency and supercomputing environmental impact, 
+		feel free to use our impact calculator and read our best practices guide.  
             </p>
         </div>
 
@@ -34,14 +37,6 @@
             <a href="impact-calculator.html" class="cta-button">Calculate My Environmental Impact</a>
         </div>
         <p class="scroll-annotation-new">Scroll down to explore more</p>
-        <div class="logos-container">
-            <a href="https://www.surf.nl">
-                <img src="surf.svg" alt="SURF Logo" class="logo">
-            </a>
-            <a href="https://uva.nl">
-                <img src="img/uva.svg" alt="UvA Logo" class="logo">
-            </a>
-        </div>
     </section>
 
     
@@ -62,6 +57,28 @@
                 <h2>What can we do?</h2>
                 <p>Addressing these inefficiencies requires better software development practices. By teaching you and other researchers about writing efficient code and encouraging you to write such code, the full potential of supercomputing resources can be unlocked, leading to further advancements in scientific research, technological development, and complex problem-solving all while reducing the growing impact of HPC on the environment.</p>
             </div>
+        </div>
+        <div class="about-section">
+            <h1>About Us</h1>
+            <section class="about-cards">
+                <div class="about-card">
+                    <h2 class="card-header">Who are we?</h2>
+                    <p><img src="img/university.svg" alt="University Icon"> We are six students of Computational Social Science at the University of Amsterdam. This website is our Digital Behavioural Change Intervention to incentivize researchers to practice more environmentally sustainable coding. </p>
+                </div>
+                <div class="about-card">
+                    <h2 class="card-header">Our goals:</h2>
+                    <p><img src="img/awareness.svg" alt="Awareness Icon"> Spread awareness</p>
+                    <p><img src="img/target.svg" alt="Impact Icon"> Incenvitize more sustainable coding</p>
+                </div>
+                <div class="about-card">
+                    <h2 class="card-header">Our collaborators:</h2>
+                    <p style="display: flex; align-items: center; justify-content: center;">
+                        <a href="https://uva.nl"><img src="img/uva.svg" alt="UvA Logo" style="width: 50px; height: auto; margin-right: 10px;"></a>
+                        <a href="https://www.surf.nl"><img src="img/surf.svg" alt="SURF Logo" style="width: 80px; height: auto;"></a>
+                    </p>
+		    <p>We are in collaboration with SURF. This website aims to help SURF's interests, while following our program at the UvA.</p>
+                </div>
+            </section>
         </div>
     </div>
 </body>
