change video path

--- a/impact-calculator.html
+++ b/impact-calculator.html
@@ -20,7 +20,7 @@
     </header>
     
     <!-- Video Background -->
-    <video id="video-background" src="img/bushfire.mp4" muted></video>
+    <video id="video-background" src="img/animation.mp4" muted></video>
     
     <div class="scrollable-container">
         <div class="title-container">
